# SlicerAAALtlas

./: AAALtlas.json  AAALtlas.py  AAL3BrainLabeling.py  CMakeLists.txt  LICENSE.txt  README.md
Resources/Atlas/: AAL3_ColorTable.ctbl
Resources/Labels/: AAL3_labels.csv
